--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^2.2.1",
     "node-sass": "^4.14.1",
     "qrcodejs2": "0.0.2",
+    "sass": "^1.35.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.2"
